--- a/gradle.properties
+++ b/gradle.properties
@@ -22,32 +22,30 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-BASE_URL = "https://strctl.getsense.co/api/v1/"
-
 #android.disableAutomaticComponentCreation=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
 
 GROUP=co.getsense
 POM_ARTIFACT_ID=android
-VERSION_NAME=0.0.6
+VERSION_NAME=0.0.1
 
-POM_NAME=Sense
+POM_NAME=SenseOS
 POM_DESCRIPTION=Sense - Identify the Good from the Bad visitors
 POM_INCEPTION_YEAR=2025
-POM_URL=https://github.com/tech-getsense/android_sense_sdk/
+POM_URL=https://github.com/sense-opensource/sense-device-identity-android/
 
 POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENSE_DIST=repo
 
-POM_SCM_URL=https://github.com/tech-getsense/android_sense_sdk/
-POM_SCM_CONNECTION=scm:git:git://github.com/tech-getsense/android_sense_sdk.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/tech-getsense/android_sense_sdk.git
+POM_SCM_URL=https://github.com/sense-opensource/sense-device-identity-android/
+POM_SCM_CONNECTION=scm:git:git://github.com/sense-opensource/sense-device-identity-android.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/sense-opensource/sense-device-identity-android.git
 
 POM_DEVELOPER_ID=sense
 POM_DEVELOPER_NAME=Sense
-POM_DEVELOPER_URL=https://github.com/tech-getsense/
+POM_DEVELOPER_URL=https://github.com/sense-opensource/
 
 ORG_GRADLE_PROJECT_signingInMemoryKey=6B22950EA374995ECBFFC5448A4C5DC2E0E9D38D
 ORG_GRADLE_PROJECT_signingInMemoryKeyPassword=Sense@Ippopay
